src/css/css_styles2.css
/* ... */
/* fire fox */
img.css_camera_zoom_in:after {
	content: url('/public/images/zoom-in_b.png');
	display: inline-flex;
	width: 32px;
	padding: 1px;
}

img.css_camera_zoom_out {
	content: url('/public/images/zoom-out_g.png');
	display: inline-flex;
	width: 32px;
	padding: 1px;
}


/* fire fox */
img.css_camera_zoom_out:after {
	content: url('/public/images/zoom-out_g.png');
	display: inline-flex;
	width: 32px;
	padding: 1px;

}


img.css_camera_mirrorX {
	content: url('/public/images/flip-horizontal_b.png');
	display: inline-flex;
	width: 32px;
	padding: 1px;
}


img.css_camera_mirrorX:after {
	content: url('/public/images/flip-horizontal_b.png');
	display: inline-flex;
	width: 32px;
	padding: 1px;
}


img.css_camera_rotate {
	content: url('/public/images/camera-rotate_g.png');
	display: inline-flex;
	width: 32px;
	padding: 1px;
}


img.css_camera_rotate:after {
	content: url('/public/images/camera-rotate_g.png');
	display: inline-flex;
	width: 32px;
	padding: 1px;
}

img.css_camera_flash_off {
	content: url('/public/images/circle-bolt_b.png');
	display: inline-flex;
	width: 32px;
	padding: 1px;
}

img.css_camera_flash_off:after {
	content: url('/public/images/circle-bolt_gr.png');
	display: inline-flex;
	width: 32px;
	padding: 1px;
}

img.css_tracking_on {
	content: url('/public/images/following_enabled_32x32.png');
}

img.css_tracking_off {
	content: url('/public/images/following_inactive_32x32.png');
}

/* fire fox */



img.css_camera_flash_on {
	content: url('/public/images/circle-bolt_r.png');
	display: inline-flex;
	width: 32px;
	padding: 1px;
}


/* fire fox */
img.css_camera_flash_on:after {
	content: url('/public/images/circle-bolt_r.png');
	display: inline-flex;
	width: 32px;
	padding: 1px;
}


img.battery_inactive {
	content: url('/public/images/battery_gy_32x32.png');
}

/* fire fox */
img.battery_inactive:before {
	content: url('/public/images/battery_gy_32x32.png');
}


img.battery_4 {
	content: url('/public/images/battery_g_32x32.png');
}

/* fire fox */
img.battery_4:before {
	content: url('/public/images/battery_g_32x32.png');
}


img.battery_3 {
	content: url('/public/images/battery_rg_32x32.png');
}

/* fire fox */
img.battery_3:before {
	content: url('/public/images/battery_rg_32x32.png');
}

img.battery_2 {
	content: url('/public/images/battery_rg_3_32x32.png');
}

/* fire fox */
img.battery_2:before {
	content: url('/public/images/battery_rg_3_32x32.png');
}

img.battery_1 {
	content: url('/public/images/battery_r_32x32.png');
}

/* fire fox */
img.battery_1:before {
	content: url('/public/images/battery_r_32x32.png');
}


img.battery_charging {
	content: url('/public/images/battery_bg_32x32.png');
}

/* fire fox */
img.battery_charging:before {
	content: url('/public/images/battery_bg_32x32.png');
}



div#imu_yaw_knob {
	width: 45px;
}

div#imu_2 {
	min-height: 45px;
}

div#bearingknob {
	min-width: 45px;
	position: absolute;
	top: 0px;
}

div#bearingtargetknob {
	min-width: 45px;
	top: 5px;
}

div#bearing_main {
	position: relative;
}


div#modal_ctrl_parameters #parameters_sublist {
	overflow-y: scroll !important;
	height: 400px !important;
	margin: 20px 5px 15px 5px !important;
	text-align: center;
}


div#andruav_unit_list_array {
	position: fixed !important;
	bottom: 22% !important;
	height: 40px !important;
	/* width: inherit !important; */
}

div#andruav_unit_list_array_float {
	position: fixed !important;
	bottom: 22% !important;
	height: 40px !important;
	/* width: inherit !important; */
}


div#modal_fpv {
	position: absolute;
	top: 200px;
	left: 100px;
	opacity: 0.85;
	float: left;
}


div#modal_ctrl_yaw {
	position: absolute;
	top: 200px;
	left: 100px;
	opacity: 0.85;
	float: left;
}


div#modal_ctrl_lidar_info {
	position: absolute;
	top: 200px;
	left: 100px;
	opacity: 0.85;
	float: left;
}



div#modal_ctrl_cam {
	position: absolute;
	top: 200px;
	left: 100px;
	min-width: 400px !important;
	max-width: 600px !important;
	opacity: 0.85;
	float: left;
}

div#modal_ctrl_servo {
	position: absolute;
	top: 200px;
	left: 100px;
	min-width: 400px !important;
	opacity: 0.85;
	float: left;
}



div#modal_ctrl_stream_dlg {
	position: absolute;
	top: 200px;
	left: 100px;
	min-width: 400px !important;
	max-width: 600px !important;
	opacity: 0.85;
	z-index: 2100 !important;
	float: left;
}

div#modal_ctrl_gimbal_dlg {
	position: absolute;
	top: 200px;
	left: 100px;
	min-width: 400px !important;
	max-width: 600px !important;
	opacity: 0.85;
	z-index: 2100 !important;
	float: left;
}

div#modal_ctrl_gamepad {
	position: absolute;
	top: 200px;
	left: 100px;
	width: 400px;
	background-color: transparent !important;
	opacity: 0.85;
	float: left;
}

#modal_gamepad_footer {
	display: flex;
	justify-content: space-between;
	align-items: center;
	padding: 10px;
	background-color: #343a40;
	/* Matches bg-dark */
}

#modal_gamepad_footer>div {
	flex: 0 0 auto;
	/* Allow buttons to take their natural width */
}


input#txt_defaultCircle {
	width: 30% !important;
	display: -webkit-inline-box !important;
}

input#txt_defaultAltitude {
	width: 30% !important;
	display: -webkit-inline-box !important;
}

input#txt_defaultSwarmAltDelta {
	width: 30% !important;
	display: -webkit-inline-box !important;
}

input#txt_defaultSwarmDistance {
	width: 30% !important;
	display: -webkit-inline-box !important;
}



.ctrlbtn {
	width: 90px !important;
	height: 30px !important;
	font-size: 11px !important;
	font-weight: bold !important;
}


.ctrlbtn_lng {
	width: 80px !important;
	font-size: 11px !important;
	font-weight: bold !important;
}

.flgtctrlbtn {
	width: 70px !important;
	height: 30px !important;
	font-size: 11px !important;
	font-weight: bold !important;
}

.flgtctrlbtn_icon {
	width: 70px !important;
	height: 30px !important;
	font-size: 20px !important;
	font-weight: bold !important;
	padding: 0px !important;
}


.flgtctrlbtn_icon_w {
	height: 30px !important;
	width: 70px !important;
	font-size: 20px !important;
	font-weight: bold !important;
	padding: 0px !important;
}
/* ... */

